--- a/1.-Setting-venv-myapp/SettingVenvMyApp/templates/counter.html
+++ b/1.-Setting-venv-myapp/SettingVenvMyApp/templates/counter.html
@@ -1,1 +1,3 @@
-<h1>The number of words in your text is: {{amount}}</h1>
+{% for post in posts %}
+<h1><a href="{% url 'post' post %}"> Post </h1>
+{% endfor %}
